@@ -29,7 +29,7 @@
  *
  ****************************************************************/
 
-#if defined COULOMB && !defined EAM
+#if defined COULOMB && defined EAM
 
 #include "potfit.h"
 
@@ -87,7 +87,7 @@
  *
  ****************************************************************/
 
-real calc_forces_elstat(real *xi_opt, real *forces, int flag)
+real calc_forces_eam_elstat(real *xi_opt, real *forces, int flag)
 {
   real  tmpsum, sum = 0.;
   int   first, col, ne, size, i;
@@ -101,6 +101,9 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
   real  dp_b[apt->number];
   real  dp_c[apt->number];
 #endif /* DIPOLE */
+
+  static real rho_sum_loc, rho_sum;
+  rho_sum_loc = rho_sum = 0.;
 
   switch (format) {
       case 0:
@@ -120,6 +123,7 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
   /* This is the start of an infinite loop */
   while (1) {
     tmpsum = 0.;		/* sum of squares of local process */
+    rho_sum_loc = 0.;
 
 #if defined APOT && !defined MPI
     if (format == 0) {
@@ -192,6 +196,8 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 #endif /* DIPOLE */
 
     /* init second derivatives for splines */
+
+    /* pair potentials */
     for (col = 0; col < paircol; col++) {
       first = calc_pot.first[col];
       if (format == 3 || format == 0) {
@@ -204,6 +210,37 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 	  calc_pot.d2tab + first);
       }
     }
+
+    /* rho */
+    for (col = paircol; col < paircol + ntypes; col++) {
+      first = calc_pot.first[col];
+      if (format == 0 || format == 3)
+	spline_ed(calc_pot.step[col], xi + first,
+	  calc_pot.last[col] - first + 1, *(xi + first - 2), 0.0,
+	  calc_pot.d2tab + first);
+      else			/* format >= 4 ! */
+	spline_ne(calc_pot.xcoord + first, xi + first,
+	  calc_pot.last[col] - first + 1, *(xi + first - 2), 0.0,
+	  calc_pot.d2tab + first);
+    }
+
+    /* F */
+    for (col = paircol + ntypes; col < paircol + 2 * ntypes; col++) {
+      first = calc_pot.first[col];
+      /* gradient at left boundary matched to square root function,
+         when 0 not in domain(F), else natural spline */
+      if (format == 0 || format == 3)
+	spline_ed(calc_pot.step[col], xi + first,
+	  calc_pot.last[col] - first + 1,
+	  *(xi + first - 2), *(xi + first - 1),
+	  calc_pot.d2tab + first);
+      else			/* format >= 4 ! */
+	spline_ne(calc_pot.xcoord + first, xi + first,
+	  calc_pot.last[col] - first + 1,
+	  *(xi + first - 2), *(xi + first - 1),
+	  calc_pot.d2tab + first);
+    }
+
 
 #ifndef MPI
     myconf = nconf;
@@ -218,6 +255,10 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
       real  fnval, grad, fnval_tail, grad_tail, grad_i, grad_j, p_sr_tail;
       atom_t *atom;
       neigh_t *neigh;
+      real  r;
+      int   col_F;
+      real  eam_force;
+      real  rho_val, rho_grad, rho_grad_j;
 
       /* loop over configurations: M A I N LOOP CONTAINING ALL ATOM-LOOPS */
       for (h = firstconf; h < firstconf + myconf; h++) {
@@ -227,6 +268,9 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 	forces[energy_p + h] = 0.;
 	for (i = 0; i < 6; i++)
 	  forces[stress_p + 6 * h + i] = 0.;
+
+	/* set limiting constraints */
+	forces[limit_p + h] = -force_0[limit_p + h];
 
 #ifdef DIPOLE
 	/* reset dipoles and fields: LOOP Z E R O */
@@ -254,10 +298,13 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 	    forces[k + 1] = 0.;
 	    forces[k + 2] = 0.;
 	  }
+	  /* reset atomic density */
+	  conf_atoms[cnfstart[h] - firstatom + i].rho = 0.0;
 	}			/* end F I R S T LOOP */
 
 	/* S E C O N D loop: calculate short-range and monopole forces,
-	   calculate static field- and dipole-contributions */
+	   calculate static field- and dipole-contributions,
+	   calculate atomic densities */
 	for (i = 0; i < inconf[h]; i++) {	/* atoms */
 	  atom = conf_atoms + i + cnfstart[h] - firstatom;
 	  typ1 = atom->typ;
@@ -420,7 +467,88 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 
 	    }
 
+	    /* calculate atomic densities */
+	    if (atom->typ == neigh->typ) {
+	      /* then transfer(a->b)==transfer(b->a) */
+	      if (neigh->r < calc_pot.end[neigh->col[1]]) {
+		rho_val =
+		  splint_dir(&calc_pot, xi, neigh->slot[1], neigh->shift[1],
+		  neigh->step[1]);
+		atom->rho += rho_val;
+		/* avoid double counting if atom is interacting with a
+		   copy of itself */
+		if (!self) {
+		  conf_atoms[neigh->nr - firstatom].rho += rho_val;
+		}
+	      }
+	    } else {
+	      /* transfer(a->b)!=transfer(b->a) */
+	      if (neigh->r < calc_pot.end[neigh->col[1]]) {
+		atom->rho +=
+		  splint_dir(&calc_pot, xi, neigh->slot[1], neigh->shift[1],
+		  neigh->step[1]);
+	      }
+	      /* cannot use slot/shift to access splines */
+	      if (neigh->r < calc_pot.end[paircol + atom->typ])
+		conf_atoms[neigh->nr - firstatom].rho +=
+		  splint(&calc_pot, xi, paircol + atom->typ, neigh->r);
+	    }
+
 	  }			/* loop over neighbours */
+
+	  col_F = paircol + ntypes + atom->typ;	/* column of F */
+	  if (atom->rho > calc_pot.end[col_F]) {
+	    /* then punish target function -> bad potential */
+	    forces[limit_p + h] +=
+	      DUMMY_WEIGHT * 10. * dsquare(atom->rho - calc_pot.end[col_F]);
+	    atom->rho = calc_pot.end[col_F];
+	  }
+
+	  if (atom->rho < calc_pot.begin[col_F]) {
+	    /* then punish target function -> bad potential */
+	    forces[limit_p + h] +=
+	      DUMMY_WEIGHT * 10. * dsquare(calc_pot.begin[col_F] - atom->rho);
+	    atom->rho = calc_pot.begin[col_F];
+	  }
+
+	  /* embedding energy, embedding gradient */
+	  /* contribution to cohesive energy is F(n) */
+#ifdef NORESCALE
+	  if (atom->rho < calc_pot.begin[col_F]) {
+	    /* linear extrapolation left */
+	    rho_val =
+	      splint_comb(&calc_pot, xi, col_F, calc_pot.begin[col_F],
+	      &atom->gradF);
+	    forces[energy_p + h] +=
+	      rho_val + (atom->rho - calc_pot.begin[col_F]) * atom->gradF;
+#ifdef APOT
+	    forces[limit_p + h] +=
+	      DUMMY_WEIGHT * 10. * dsquare(calc_pot.begin[col_F] - atom->rho);
+#endif /* APOT */
+	  } else if (atom->rho > calc_pot.end[col_F]) {
+	    /* and right */
+	    rho_val =
+	      splint_comb(&calc_pot, xi, col_F,
+	      calc_pot.end[col_F] - .5 * calc_pot.step[col_F], &atom->gradF);
+	    forces[energy_p + h] +=
+	      rho_val + (atom->rho - calc_pot.end[col_F]) * atom->gradF;
+#ifdef APOT
+	    forces[limit_p + h] +=
+	      DUMMY_WEIGHT * 10. * dsquare(atom->rho - calc_pot.end[col_F]);
+#endif /* APOT */
+	  }
+	  /* and in-between */
+	  else {
+	    forces[energy_p + h] +=
+	      splint_comb(&calc_pot, xi, col_F, atom->rho, &atom->gradF);
+	  }
+#else
+	  forces[energy_p + h] +=
+	    splint_comb(&calc_pot, xi, col_F, atom->rho, &atom->gradF);
+#endif /* NORESCALE */
+	  /* sum up rho */
+	  rho_sum_loc += atom->rho;
+
 	}			/* end S E C O N D loop over atoms */
 
 #ifdef DIPOLE
@@ -795,6 +923,79 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 	}			/* end F I F T H loop over atoms */
 
 
+	/* S I X T H  loop: EAM force */
+	if (uf) {		/* only required if we calc forces */
+	  for (i = 0; i < inconf[h]; i++) {
+	    atom = conf_atoms + i + cnfstart[h] - firstatom;
+	    k = 3 * (cnfstart[h] + i);
+	    for (j = 0; j < atom->n_neigh; j++) {
+	      /* loop over neighbors */
+	      neigh = atom->neigh + j;
+	      /* In small cells, an atom might interact with itself */
+	      self = (neigh->nr == i + cnfstart[h]) ? 1 : 0;
+	      col_F = paircol + ntypes + atom->typ;	/* column of F */
+	      r = neigh->r;
+	      /* are we within reach? */
+	      if ((r < calc_pot.end[neigh->col[1]])
+		|| (r < calc_pot.end[col_F - ntypes])) {
+		rho_grad =
+		  (r < calc_pot.end[neigh->col[1]]) ? splint_grad_dir(&calc_pot,
+		  xi, neigh->slot[1], neigh->shift[1], neigh->step[1]) : 0.;
+		if (atom->typ == neigh->typ)	/* use actio = reactio */
+		  rho_grad_j = rho_grad;
+		else
+		  rho_grad_j =
+		    (r < calc_pot.end[col_F - ntypes]) ? splint_grad(&calc_pot,
+		    xi, col_F - ntypes, r) : 0.;
+		/* now we know everything - calculate forces */
+		eam_force =
+		  (rho_grad * atom->gradF +
+		  rho_grad_j * conf_atoms[(neigh->nr) - firstatom].gradF);
+		/* avoid double counting if atom is interacting with a
+		   copy of itself */
+		if (self)
+		  eam_force *= 0.5;
+		tmp_force.x = neigh->dist.x * eam_force;
+		tmp_force.y = neigh->dist.y * eam_force;
+		tmp_force.z = neigh->dist.z * eam_force;
+		forces[k] += tmp_force.x;
+		forces[k + 1] += tmp_force.y;
+		forces[k + 2] += tmp_force.z;
+		/* actio = reactio */
+		l = 3 * neigh->nr;
+		forces[l] -= tmp_force.x;
+		forces[l + 1] -= tmp_force.y;
+		forces[l + 2] -= tmp_force.z;
+#ifdef STRESS
+		/* and stresses */
+		if (us) {
+		  tmp_force.x *= neigh->r;
+		  tmp_force.y *= neigh->r;
+		  tmp_force.z *= neigh->r;
+		  stresses = stress_p + 6 * h;
+		  forces[stresses] -= neigh->dist.x * tmp_force.x;
+		  forces[stresses + 1] -= neigh->dist.y * tmp_force.y;
+		  forces[stresses + 2] -= neigh->dist.z * tmp_force.z;
+		  forces[stresses + 3] -= neigh->dist.x * tmp_force.y;
+		  forces[stresses + 4] -= neigh->dist.y * tmp_force.z;
+		  forces[stresses + 5] -= neigh->dist.z * tmp_force.x;
+		}
+#endif /* STRESS */
+	      }			/* within reach */
+	    }			/* loop over neighbours */
+#ifdef FWEIGHT
+	    /* Weigh by absolute value of force */
+	    forces[k] /= FORCE_EPS + atom->absforce;
+	    forces[k + 1] /= FORCE_EPS + atom->absforce;
+	    forces[k + 2] /= FORCE_EPS + atom->absforce;
+#endif /* FWEIGHT */
+	    /* sum up forces  */
+	    tmpsum +=
+	      conf_weight[h] * (dsquare(forces[k]) + dsquare(forces[k + 1]) +
+	      dsquare(forces[k + 2]));
+	   }
+	  }        	/* end S I X T H loop over atoms */	
+
 	/* whole energy contributions flow into tmpsum */
 	forces[energy_p + h] /= (real)inconf[h];
 	forces[energy_p + h] -= force_0[energy_p + h];
@@ -819,8 +1020,16 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
 	  }
 	}
 #endif /* STRESS */
+	/* limiting constraints per configuration */
+	tmpsum += conf_weight[h] * dsquare(forces[limit_p + h]);
       }				/* end M A I N loop over configurations */
     }				/* parallel region */
+#ifdef MPI
+    /* Reduce rho_sum */
+    MPI_Reduce(&rho_sum_loc, &rho_sum, 1, REAL, MPI_SUM, 0, MPI_COMM_WORLD);
+#else /* MPI */
+    rho_sum = rho_sum_loc;
+#endif /* MPI */
 
     /* dummy constraints (global) */
 #ifdef APOT
@@ -830,6 +1039,38 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
     }
 #endif /* APOT */
 
+    if (myid == 0) {
+      int   g;
+      for (g = 0; g < ntypes; g++) {
+#ifdef NORESCALE
+	/* clear field */
+	forces[dummy_p + ntypes + g] = 0.;	/* Free end... */
+	/* NEW: Constraint on U': U'(1.)=0; */
+	forces[dummy_p + g] =
+	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g, 1.);
+#else /* NOTHING */
+	forces[dummy_p + ntypes + g] = 0.;	/* Free end... */
+/* constraints on U`(n) */
+	forces[dummy_p + g] =
+	  DUMMY_WEIGHT * splint_grad(&calc_pot, xi, paircol + ntypes + g,
+	  .5 * (calc_pot.begin[paircol + ntypes + g] + calc_pot.end[paircol +
+	      ntypes + g]))
+	  - force_0[dummy_p + g];
+#endif /* NORESCALE */
+	tmpsum += dsquare(forces[dummy_p + ntypes + g]);
+	tmpsum += dsquare(forces[dummy_p + g]);
+      }				/* loop over types */
+#ifdef NORESCALE
+      /* NEW: Constraint on n: <n>=1. ONE CONSTRAINT ONLY */
+      /* Calculate averages */
+      rho_sum /= (real)natoms;
+      /* ATTN: if there are invariant potentials, things might be problematic */
+      forces[dummy_p + ntypes] = DUMMY_WEIGHT * (rho_sum - 1.);
+      tmpsum += dsquare(forces[dummy_p + ntypes]);
+#endif /* NORESCALE */
+    }				/* only root process */
+
+
     sum = tmpsum;		/* global sum = local sum  */
 
 #ifdef MPI
@@ -837,14 +1078,21 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
     sum = 0.;
     MPI_Reduce(&tmpsum, &sum, 1, REAL, MPI_SUM, 0, MPI_COMM_WORLD);
     /* gather forces, energies, stresses */
-    MPI_Gatherv(forces + firstatom * 3, myatoms, MPI_VEKTOR,	/* forces */
+    /* forces */
+    MPI_Gatherv(forces + firstatom * 3, myatoms, MPI_VEKTOR,
       forces, atom_len, atom_dist, MPI_VEKTOR, 0, MPI_COMM_WORLD);
-    MPI_Gatherv(forces + natoms * 3 + firstconf, myconf, REAL,	/* energies */
+    /* energies */
+    MPI_Gatherv(forces + natoms * 3 + firstconf, myconf, REAL,	
       forces + natoms * 3, conf_len, conf_dist, REAL, 0, MPI_COMM_WORLD);
     /* stresses */
     MPI_Gatherv(forces + natoms * 3 + nconf + 6 * firstconf, myconf, MPI_STENS,
       forces + natoms * 3 + nconf, conf_len, conf_dist, MPI_STENS, 0,
       MPI_COMM_WORLD);
+    /* punishment constraints */
+    MPI_Gatherv(forces + natoms * 3 + 7 * nconf + firstconf, myconf, REAL,
+      forces + natoms * 3 + 7 * nconf, conf_len, conf_dist, REAL, 0,
+      MPI_COMM_WORLD);
+    /* no need to pick up dummy constraints - are already @ root */
 #endif /* MPI */
 
     /* root process exits this function now */
@@ -865,4 +1113,5 @@ real calc_forces_elstat(real *xi_opt, real *forces, int flag)
   return -1.;
 }
 
-#endif /* COULOMB */
+
+#endif /* COULOMB && EAM */
