@@ -1,3 +1,7 @@
+dipole-20120308
++ EAM potentials can now be used together with electrostatics (COULOMB or
+DIPOLE), but not in parallel yet
+
 potfit-0.5 (20111216)
 + fix invariant chemical potentials
 + errors for short distances are now more clear
